# base_custom

./: Cargo.toml  README.md
benches/: bench.rs
src/: .lib.rs.swp  char.rs  lib.rs  string.rs  u8.rs  util.rs
tests/: .lib.rs.swp  lib.rs
